first components and signup form

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<h1>Welcome to Fi Sabilillah Counseling Community!</h1>
-<p>(A leading and trusted platform for mental health)</p>
-<!-- <img src=> -->   logo
-
+<app-header></app-header>
+<app-dashboard></app-dashboard>
+<app-signup></app-signup>
+<app-footer></app-footer>
 <router-outlet></router-outlet>
