--- a/src/app/dashboard/signup/signup.component.html
+++ b/src/app/dashboard/signup/signup.component.html
@@ -1,7 +1,7 @@
 <!-- SignUp Form -->
 <div class="container">
     <h2>New User SignUp Form</h2>
-    <form >
+    <form #signupForm="ngForm" (ngSubmit)="OnFormSubmitted(signupForm)">
       <div class="form-group">
         <label for="fullName">Full Name:</label>
         <input type="text" class="form-control" id="fullName" name="fullName" ngModel required>
@@ -35,9 +35,21 @@
         <label for="age">Age:</label>
         <input type="number" class="form-control" id="age" name="age" ngModel required>
       </div>
-      
+      <div class="form-group">
+        <label for="UserName">User Name:</label>
+        <input type="text" class="form-control" id="userName" name="userName" ngModel required>
+      </div>
+      <div class="form-group">
+        <label for="password">Create Password:</label>
+        <input type="password" class="form-control" id="password" name="password" ngModel required>
+      </div>
+      <div class="form-group">
+        <label for="cpassword">Confirm Password:</label>
+        <input type="password" class="form-control" id="cpassword" name="password" ngModel required>
+      </div>
       <!-- Submit Button -->
-      <button type="submit" class="btn btn-primary">Submit</button>
+      c<button type="submit" class="btn btn-primary">Sign Up</button>
+      <button type="reset" class="btn btn-secondary">Reset </button>
     </form>
   </div>
   
