--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -9,25 +9,26 @@
       <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="#">Home</a>
+            <a class="nav-link" routerLink="home" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" routerLink="about" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Services</a>
+            <a class="nav-link" routerLink="services" [routerLinkActive]="'active'" [routerLinkActiveOptions]="{exact: true}">Services</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contact-Us</a>
+            <a class="nav-link" href="contactus" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Contact-Us</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">SignUp</a>
+            <a class="nav-link" routerLink="signup" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">SignUp</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Login</a>
+            <a class="nav-link" routerLink="login" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Login</a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
+  <app-search-text></app-search-text>
   
