--- a/src/app/dashboard/signup/signup.component.html
+++ b/src/app/dashboard/signup/signup.component.html
@@ -1,7 +1,7 @@
 <!-- SignUp Form -->
 <div class="container">
   <h2>New User SignUp Form</h2>
-  <form #signupForm="ngForm" (ngSubmit)="onSubmit()" novalidate >
+  <form>
     <div class="form-group">
       <label for="fullName">Full Name:</label>
       <input type="text" class="form-control" id="fullName" name="fullName" ngModel required>
